Fixed overflow issue.

--- a/css/home.css
+++ b/css/home.css
@@ -189,6 +189,9 @@ html, body {
   left: 50%;
   background: url(/img/arrow-down.png) no-repeat;
   -webkit-animation: bounce 1s infinite;
+  animation: bounce 1s infinite;
+  width: 32px !important;
+  height: 32px !important;
 }
 @-webkit-keyframes bounce {
   0% {bottom: 45px;}
